--- a/GigSkarte/jobscreen1.kv
+++ b/GigSkarte/jobscreen1.kv
@@ -83,17 +83,17 @@
             MDNavigationItem:
                 icon: "home"
                 text: "Home"
-                on_release: print("Home clicked")
+                on_release: print("Home")
 
             MDNavigationItem:
                 icon: "magnify"
-                text: "Search"
-                on_release: print("Search clicked")
+                text: "Chat"
+                on_release: print("Chat")
 
             MDNavigationItem:
                 icon: "account"
-                text: "Profile"
-                on_release: print("Profile clicked")
+                text: "Pending"
+                on_release: print("Pending")
 
 
 
