--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -97,31 +97,91 @@ ScreenManager:
 
 
 <SelectScreen>:
-    BoxLayout:
-        orientation: 'vertical'
-        padding: 40
-        spacing: 20
+    canvas.before:
+        Color:
+            rgba: 0.1, 0.1, 0.1, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
 
-        Label:
-            text: "Choose an Option"
-            font_size: '28sp'
-            size_hint_y: 0.3
-            halign: 'center'
-            valign: 'middle'
+    FloatLayout:
 
-        Button:
-            text: "Become a Worker"
-            size_hint_y: 0.3
-            font_size: '20sp'
-            background_color: (0.2, 0.6, 0.8, 1)
-            on_release: root.on_worker()
+        BoxLayout:
+            orientation: 'horizontal'
+            size_hint: None, None
+            size: 900, 600
+            pos_hint: {'center_x': 0.48, 'top': 1}  
 
-        Button:
-            text: "Become an Employer"
-            size_hint_y: 0.3
-            font_size: '20sp'
-            background_color: (0.1, 0.7, 0.3, 1)
-            on_release: root.on_employer()
+            padding: 20
+            spacing: 30
+
+            canvas.before:
+                Color:
+                    rgba: 0.96, 0.94, 0.89, 1
+                RoundedRectangle:
+                    pos: self.pos
+                    size: self.size
+                    radius: [15]
+
+            Widget:
+                size_hint_x: 0.02 
+
+            AnchorLayout:
+                size_hint_x: 0.98
+                anchor_x: 'center'
+                anchor_y: 'top'
+                pos_hint: {'top': 0.95}
+
+                BoxLayout:
+                    orientation: 'vertical'
+                    size_hint: None, None
+                    size: 400, 400
+                    padding: 10
+                    spacing: 15
+
+                    Label:
+                        text: "Choose an Option"
+                        font_size: '28sp'
+                        color: 0, 0, 0, 1
+                        size_hint_y: None
+                        height: 70
+                        halign: 'center'
+                        valign: 'middle'
+                        text_size: self.size
+
+                    Button:
+                        text: "Become a Worker"
+                        font_size: '20sp'
+                        size_hint_y: None
+                        height: 100
+                        background_normal: ''
+                        background_color: 0.85, 0.2, 0.25, 1
+                        color: 0, 0, 0, 1
+                        on_release: root.on_worker()
+                        canvas.before:
+                            Color:
+                                rgba: self.background_color
+                            RoundedRectangle:
+                                pos: self.pos
+                                size: self.size
+                                radius: [20]
+
+                    Button:
+                        text: "Become an Employer"
+                        font_size: '20sp'
+                        size_hint_y: None
+                        height: 100
+                        background_normal: ''
+                        background_color: 0.85, 0.2, 0.25, 1
+                        color: 0, 0, 0, 1
+                        on_release: root.on_employer()
+                        canvas.before:
+                            Color:
+                                rgba: self.background_color
+                            RoundedRectangle:
+                                pos: self.pos
+                                size: self.size
+                                radius: [20]
 
 
 <InterestsScreen>:
