--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -97,91 +97,31 @@ ScreenManager:
 
 
 <SelectScreen>:
-    canvas.before:
-        Color:
-            rgba: 0.1, 0.1, 0.1, 1
-        Rectangle:
-            pos: self.pos
-            size: self.size
+    BoxLayout:
+        orientation: 'vertical'
+        padding: 40
+        spacing: 20
 
-    FloatLayout:
+        Label:
+            text: "Choose an Option"
+            font_size: '28sp'
+            size_hint_y: 0.3
+            halign: 'center'
+            valign: 'middle'
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint: None, None
-            size: 900, 600
-            pos_hint: {'center_x': 0.48, 'top': 1}  
+        Button:
+            text: "Become a Worker"
+            size_hint_y: 0.3
+            font_size: '20sp'
+            background_color: (0.2, 0.6, 0.8, 1)
+            on_release: root.on_worker()
 
-            padding: 20
-            spacing: 30
-
-            canvas.before:
-                Color:
-                    rgba: 0.96, 0.94, 0.89, 1
-                RoundedRectangle:
-                    pos: self.pos
-                    size: self.size
-                    radius: [15]
-
-            Widget:
-                size_hint_x: 0.02 
-
-            AnchorLayout:
-                size_hint_x: 0.98
-                anchor_x: 'center'
-                anchor_y: 'top'
-                pos_hint: {'top': 0.95}
-
-                BoxLayout:
-                    orientation: 'vertical'
-                    size_hint: None, None
-                    size: 400, 400
-                    padding: 10
-                    spacing: 15
-
-                    Label:
-                        text: "Choose an Option"
-                        font_size: '28sp'
-                        color: 0, 0, 0, 1
-                        size_hint_y: None
-                        height: 70
-                        halign: 'center'
-                        valign: 'middle'
-                        text_size: self.size
-
-                    Button:
-                        text: "Become a Worker"
-                        font_size: '20sp'
-                        size_hint_y: None
-                        height: 100
-                        background_normal: ''
-                        background_color: 0.85, 0.2, 0.25, 1
-                        color: 0, 0, 0, 1
-                        on_release: root.on_worker()
-                        canvas.before:
-                            Color:
-                                rgba: self.background_color
-                            RoundedRectangle:
-                                pos: self.pos
-                                size: self.size
-                                radius: [20]
-
-                    Button:
-                        text: "Become an Employer"
-                        font_size: '20sp'
-                        size_hint_y: None
-                        height: 100
-                        background_normal: ''
-                        background_color: 0.85, 0.2, 0.25, 1
-                        color: 0, 0, 0, 1
-                        on_release: root.on_employer()
-                        canvas.before:
-                            Color:
-                                rgba: self.background_color
-                            RoundedRectangle:
-                                pos: self.pos
-                                size: self.size
-                                radius: [20]
+        Button:
+            text: "Become an Employer"
+            size_hint_y: 0.3
+            font_size: '20sp'
+            background_color: (0.1, 0.7, 0.3, 1)
+            on_release: root.on_employer()
 
 
 <InterestsScreen>:
@@ -189,6 +129,14 @@ ScreenManager:
         orientation: 'vertical'
         padding: 20
         spacing: 10
+
+        canvas.before:
+            color:
+                rgba: 1,1,1,1
+            Rectangle:
+                pos: self.pos
+                size: self.size
+
 
         Label:
             text: "Choose Your Interest"
@@ -199,6 +147,7 @@ ScreenManager:
             text: "What kind of work are you into? Or what do you need help with?"
             font_size: 18
             size_hint: 1, 0.1
+            color: 0,0,0,1
 
         GridLayout:
             id: grid_layout
@@ -209,51 +158,76 @@ ScreenManager:
             ToggleButton:
                 text: "House Cleaning"
                 size_hint_y: None
-                height: 40
+                height: 40                
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7, 0.7, 0.7, 1)
+
             ToggleButton:
                 text: "Laundry Folding & Ironing"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Dishwashing"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Gardening & Yardwork"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Home Organizing"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Dog Walking"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Pet Sitting"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Bathing & Grooming"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Elderly Assistance"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Babysitting"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Homework Tutoring"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
             ToggleButton:
                 text: "Grocery Shopping"
                 size_hint_y: None
                 height: 40
+                background_normal: ''
+                background_color: (0.866, 0.219, 0.275, 1) if self.state == 'down' else (0.7,0.7,0.7,1)
 
         Button:
             text: "Next"
@@ -410,32 +384,13 @@ ScreenManager:
             spacing: dp(10)
             size_hint_y: 0.8
 
-        MDFabButton:
+        MDFlatButton:
             style: "large"
             icon: "plus"
             md_bg_color: "green"
             pos_hint: {"right": 0.95, "y": 0.05}
             on_release:
                 app.root.current = "editable_screen"
-        
-        MDNavigationBar:
-            panel_color: "#222222"
-            selected_color_background: "#4CAF50"
-            text_color_active: "#FFFFFF"
-            text_color_disabled: "#AAAAAA"
-            size_hint_y: None
-            height: dp(64)
-            pos_hint: {"center_x": 0.5, "y": 0}
-
-            MDNavigationItem:
-                icon: "home"
-                text: "Home"
-                on_release: print("Home clicked")
-
-            MDNavigationItem:
-                icon: "account"
-                text: "Profile"
-                on_release: print("Profile clicked")
 
 
 <EditableJobScreen>:
