--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -52,14 +52,9 @@ ScreenManager:
         MDTextField:
             id: first_name
             hint_text: "First Name"
-            mode: "outlined"
-            size_hint_x: 1
             helper_text: "Required"
             helper_text_mode: "on_error"
             required: True
-            mode: "outlined" 
-            text_color: 0, 0, 0, 1 
-            line_color_focus: 0.87, 0.22, 0.27, 1  
 
         MDTextField:
             id: last_name
@@ -72,21 +67,6 @@ ScreenManager:
             required: True
 
         MDTextField:
-        MDBoxLayout:
-            orientation: "vertical"
-            padding: "40dp"
-            spacing: "20dp"
-            size_hint_y: None
-            height: self.minimum_height
-        MDLabel:
-            text: "Email:"
-        MDTextInput:
-            id: email
-            multiline: False
-
-        MDLabel:
-            text: "Phone:"
-        MDTextInput:
             id: phone
             hint_text: "Phone Number"
             text_color: 0, 0, 0, 1
@@ -228,6 +208,79 @@ ScreenManager:
                 background_color: 0.87, 0.22, 0.27, 1
                 color: 1, 1, 1, 1
                 on_release: root.login()
+                
+<LoginScreen>:
+    name: "login"
+    canvas.before:
+        Color:
+            rgba: 0.93, 0.92, 0.89, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    BoxLayout:
+        orientation: "vertical"
+        padding: "40dp"
+        spacing: "20dp"
+
+        MDLabel:
+            text: "[b]GigSkarte[/b]"
+            markup: True
+            halign: "center"
+
+        MDLabel:
+            text: "Login to your account"
+            text_color: 0, 0, 0, 1
+            halign: "center"
+
+        MDTextField:
+            id: phone
+            hint_text: "Phone Number"
+            text_color: 0, 0, 0, 1
+            input_filter: "int"
+            max_text_length: 15
+            required: True
+
+        MDLabel:
+            text: "Birthdate"
+            text_color: 0, 0, 0, 1
+            size_hint_y: None
+            height: "20dp"
+
+        BoxLayout:
+            size_hint_y: None
+            height: "40dp"
+            spacing: "15dp"
+
+            Spinner:
+                id: birth_month
+                text: "Month"
+                values: [str(i) for i in range(1, 13)]
+                size_hint_x: 0.3
+
+            Spinner:
+                id: birth_day
+                text: "Day"
+                values: [str(i) for i in range(1, 32)]
+                size_hint_x: 0.3
+
+            Spinner:
+                id: birth_year
+                text: "Year"
+                values: [str(i) for i in range(1950, 2025)]
+                size_hint_x: 0.4
+
+        BoxLayout:
+            size_hint_y: None
+            height: "50dp"
+            spacing: "20dp"
+            padding: [0, 10, 0, 0]
+
+            Button:
+                text: "Log In"
+                background_color: 0.87, 0.22, 0.27, 1
+                color: 1, 1, 1, 1
+                on_release: root.login()
 
 <SelectScreen>:
     BoxLayout:
@@ -305,52 +358,61 @@ ScreenManager:
 
         Label:
             text: "What kind of work are you into? Or what do you need help with?"
-            font_size: '18sp'
-            size_hint_y: 0.1
+            font_size: '16sp'         
+            size_hint_y: None        
+            height: self.texture_size[1]  
+            text_size: self.width - dp(40), None   
+            halign: 'center'         
+            valign: 'middle'         
             color: 0, 0, 0, 1
 
-        GridLayout:
-            id: grid_layout 
-            cols: 2
-            spacing: dp(10)
+        ScrollView:
             size_hint_y: 0.7
+            do_scroll_x: False
 
-            ColorChangingToggleButton:
-                text: "House Cleaning"
-            ColorChangingToggleButton:
-                text: "Laundry Folding & Ironing"
-            ColorChangingToggleButton:
-                text: "Dishwashing"
-            ColorChangingToggleButton:
-                text: "Gardening & Yardwork"
-            ColorChangingToggleButton:
-                text: "Home Organizing"
-            ColorChangingToggleButton:
-                text: "Dog Walking"
-            ColorChangingToggleButton:
-                text: "Pet Sitting"
-            ColorChangingToggleButton:
-                text: "Bathing & Grooming"
-            ColorChangingToggleButton:
-                text: "Elderly Assistance"
-            ColorChangingToggleButton:
-                text: "Babysitting"
-            ColorChangingToggleButton:
-                text: "Homework Tutoring"
-            ColorChangingToggleButton:
-                text: "Grocery Shopping"
-            ColorChangingToggleButton:
-                text: "Watering Plants"
-            ColorChangingToggleButton:
-                text: "Washing Clothes"
-            ColorChangingToggleButton:
-                text: "Taking out the Trash"
-            ColorChangingToggleButton:
-                text: "Decluttering Shelves"
-            ColorChangingToggleButton:
-                text: "Cleaning the Toilet"
-            ColorChangingToggleButton:
-                text: "Wiping Windows"
+            GridLayout:
+                id: grid_layout
+                cols: 2
+                spacing: dp(10)
+                size_hint_y: None
+                height: self.minimum_height
+
+                ColorChangingToggleButton:
+                    text: "House Cleaning"
+                ColorChangingToggleButton:
+                    text: "Laundry Folding & Ironing"
+                ColorChangingToggleButton:
+                    text: "Dishwashing"
+                ColorChangingToggleButton:
+                    text: "Gardening & Yardwork"
+                ColorChangingToggleButton:
+                    text: "Home Organizing"
+                ColorChangingToggleButton:
+                    text: "Dog Walking"
+                ColorChangingToggleButton:
+                    text: "Pet Sitting"
+                ColorChangingToggleButton:
+                    text: "Bathing & Grooming"
+                ColorChangingToggleButton:
+                    text: "Elderly Assistance"
+                ColorChangingToggleButton:
+                    text: "Babysitting"
+                ColorChangingToggleButton:
+                    text: "Homework Tutoring"
+                ColorChangingToggleButton:
+                    text: "Grocery Shopping"
+                ColorChangingToggleButton:
+                    text: "Watering Plants"
+                ColorChangingToggleButton:
+                    text: "Washing Clothes"
+                ColorChangingToggleButton:
+                    text: "Taking out the Trash"
+                ColorChangingToggleButton:
+                    text: "Decluttering Shelves"
+                ColorChangingToggleButton:
+                    text: "Cleaning the Toilet"
+                ColorChangingToggleButton:
+                    text: "Wiping Windows"
 
         Button:
             text: "Next"
@@ -366,7 +428,12 @@ ScreenManager:
     background_color: (0.83, 0.83, 0.83, 1) if self.state == 'normal' else (0.87, 0.22, 0.27, 1)
     color: (0, 0, 0, 1) if self.state == 'normal' else (1, 1, 1, 1)
     size_hint_y: None
-    height: dp(40)
+    height: self.texture_size[1] + dp(20) 
+    text_size: self.width - dp(20), None   
+    halign: 'center'
+    valign: 'middle'
+    padding: dp(10), dp(10)
+    shorten: False                        
     canvas.before:
         Color:
             rgba: self.background_color
@@ -572,7 +639,7 @@ ScreenManager:
 
         Label:
             text: "Job Title:"
-        TextInput:
+        MDTextField:
             id: edit_title
             hint_text: "Job Title"
             required: True
