--- a/GigSkarte/GigSkarte_ver1.kv
+++ b/GigSkarte/GigSkarte_ver1.kv
@@ -67,6 +67,14 @@ ScreenManager:
             required: True
 
         MDTextField:
+            id: password
+            hint_text: "Password"
+            password: True
+            helper_text: "Required"
+            helper_text_mode: "on_error"
+            required: True
+
+        MDTextField:
             id: phone
             hint_text: "Phone Number"
             text_color: 0, 0, 0, 1
@@ -168,77 +176,12 @@ ScreenManager:
             max_text_length: 15
             required: True
 
-        MDLabel:
-            text: "Birthdate"
-            text_color: 0, 0, 0, 1
-            size_hint_y: None
-            height: "20dp"
-
-        BoxLayout:
-            size_hint_y: None
-            height: "40dp"
-            spacing: "15dp"
-
-            Spinner:
-                id: birth_month
-                text: "Month"
-                values: [str(i) for i in range(1, 13)]
-                size_hint_x: 0.3
-
-            Spinner:
-                id: birth_day
-                text: "Day"
-                values: [str(i) for i in range(1, 32)]
-                size_hint_x: 0.3
-
-            Spinner:
-                id: birth_year
-                text: "Year"
-                values: [str(i) for i in range(1950, 2025)]
-                size_hint_x: 0.4
-
-        BoxLayout:
-            size_hint_y: None
-            height: "50dp"
-            spacing: "20dp"
-            padding: [0, 10, 0, 0]
-
-            Button:
-                text: "Log In"
-                background_color: 0.87, 0.22, 0.27, 1
-                color: 1, 1, 1, 1
-                on_release: root.login()
-                
-<LoginScreen>:
-    name: "login"
-    canvas.before:
-        Color:
-            rgba: 0.93, 0.92, 0.89, 1
-        Rectangle:
-            pos: self.pos
-            size: self.size
-
-    BoxLayout:
-        orientation: "vertical"
-        padding: "40dp"
-        spacing: "20dp"
-
-        MDLabel:
-            text: "[b]GigSkarte[/b]"
-            markup: True
-            halign: "center"
-
-        MDLabel:
-            text: "Login to your account"
-            text_color: 0, 0, 0, 1
-            halign: "center"
-
         MDTextField:
-            id: phone
-            hint_text: "Phone Number"
-            text_color: 0, 0, 0, 1
-            input_filter: "int"
-            max_text_length: 15
+            id: password
+            hint_text: "Password"
+            password: True
+            helper_text: "Required"
+            helper_text_mode: "on_error"
             required: True
 
         MDLabel:
@@ -281,7 +224,7 @@ ScreenManager:
                 background_color: 0.87, 0.22, 0.27, 1
                 color: 1, 1, 1, 1
                 on_release: root.login()
-
+                
 <SelectScreen>:
     BoxLayout:
         orientation: "vertical"
